DeploymentArtefacts/azureCluster/default/postgresDeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: default
  labels:
    app: db

spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      imagePullSecrets:
        - name: acr-secret 
      containers:
        - name: postgres
          image: shan365.azurecr.io/postgres:9.4
          ports:
            - containerPort: 5432
